# and-digital-openai-hackathon

./: .gitignore  README.md
backend/: app.py  pyproject.toml
frontend/: index.html
frontend/src/: App.jsx  UserInput.jsx
