[tool.poetry]
name = "and-digital-openai-hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
Flask-Cors = "^4.0.1"
openai = "^1.26.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
